- changed version to 0.7.2-SNAPSHOT - throws Exception when HTTP status code>=300 - minor refactoring